lib/hibon/ffi/hibon_ffi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Dart API for using Hibon
class HibonFfi {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  HibonFfi(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  HibonFfi.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int tagion_hibon_create(
    ffi.Pointer<HiBONT> instance,
  ) {
    return _tagion_hibon_create(
      instance,
    );
  }

  late final _tagion_hibon_createPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<HiBONT>)>>(
          'tagion_hibon_create');
  late final _tagion_hibon_create =
      _tagion_hibon_createPtr.asFunction<int Function(ffi.Pointer<HiBONT>)>();

  void tagion_hibon_free(
    ffi.Pointer<HiBONT> instance,
  ) {
    return _tagion_hibon_free(
      instance,
    );
  }

  late final _tagion_hibon_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<HiBONT>)>>(
          'tagion_hibon_free');
  late final _tagion_hibon_free =
      _tagion_hibon_freePtr.asFunction<void Function(ffi.Pointer<HiBONT>)>();

  int tagion_hibon_get_text(
    ffi.Pointer<HiBONT> instance,
    int text_format,
    ffi.Pointer<ffi.Pointer<ffi.Char>> str,
    ffi.Pointer<ffi.Uint64> str_len,
  ) {
    return _tagion_hibon_get_text(
      instance,
      text_format,
      str,
      str_len,
    );
  }

  late final _tagion_hibon_get_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Int32,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_hibon_get_text');
  late final _tagion_hibon_get_text = _tagion_hibon_get_textPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Uint64>)>();

  int tagion_hibon_get_document(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> buf,
    ffi.Pointer<ffi.Uint64> buf_len,
  ) {
    return _tagion_hibon_get_document(
      instance,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_get_documentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Uint64>)>>('tagion_hibon_get_document');
  late final _tagion_hibon_get_document =
      _tagion_hibon_get_documentPtr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Uint64>)>();

  int tagion_hibon_add_string(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Char> value,
    int value_len,
  ) {
    return _tagion_hibon_add_string(
      instance,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _tagion_hibon_add_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64)>>('tagion_hibon_add_string');
  late final _tagion_hibon_add_string = _tagion_hibon_add_stringPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Char>, int)>();

  int tagion_hibon_add_document(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_document(
      instance,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_documentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_document');
  late final _tagion_hibon_add_document =
      _tagion_hibon_add_documentPtr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_hibon(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<HiBONT> sub_instance,
  ) {
    return _tagion_hibon_add_hibon(
      instance,
      key,
      key_len,
      sub_instance,
    );
  }

  late final _tagion_hibon_add_hibonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Pointer<HiBONT>)>>('tagion_hibon_add_hibon');
  late final _tagion_hibon_add_hibon = _tagion_hibon_add_hibonPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<HiBONT>)>();

  int tagion_hibon_add_binary(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_binary(
      instance,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_binaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_binary');
  late final _tagion_hibon_add_binary = _tagion_hibon_add_binaryPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_time(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    int time,
  ) {
    return _tagion_hibon_add_time(
      instance,
      key,
      key_len,
      time,
    );
  }

  late final _tagion_hibon_add_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Int64)>>('tagion_hibon_add_time');
  late final _tagion_hibon_add_time = _tagion_hibon_add_timePtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, int)>();

  int tagion_hibon_add_bigint(
    ffi.Pointer<HiBONT> instance,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> bigint_buf,
    int bigint_buf_len,
  ) {
    return _tagion_hibon_add_bigint(
      instance,
      key,
      key_len,
      bigint_buf,
      bigint_buf_len,
    );
  }

  late final _tagion_hibon_add_bigintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_bigint');
  late final _tagion_hibon_add_bigint = _tagion_hibon_add_bigintPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_bool(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    bool value,
  ) {
    return _tagion_hibon_add_bool(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Bool)>>('tagion_hibon_add_bool');
  late final _tagion_hibon_add_bool = _tagion_hibon_add_boolPtr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, bool)>();

  int tagion_hibon_add_array_bool(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_bool(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_bool');
  late final _tagion_hibon_add_array_bool =
      _tagion_hibon_add_array_boolPtr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_int32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    int value,
  ) {
    return _tagion_hibon_add_int32(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Int32)>>('tagion_hibon_add_int32');
  late final _tagion_hibon_add_int32 = _tagion_hibon_add_int32Ptr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, int)>();

  int tagion_hibon_add_array_int32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_int32(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_int32');
  late final _tagion_hibon_add_array_int32 =
      _tagion_hibon_add_array_int32Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_int64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    int value,
  ) {
    return _tagion_hibon_add_int64(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Int64)>>('tagion_hibon_add_int64');
  late final _tagion_hibon_add_int64 = _tagion_hibon_add_int64Ptr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, int)>();

  int tagion_hibon_add_array_int64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_int64(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_int64');
  late final _tagion_hibon_add_array_int64 =
      _tagion_hibon_add_array_int64Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_uint32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    int value,
  ) {
    return _tagion_hibon_add_uint32(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Uint32)>>('tagion_hibon_add_uint32');
  late final _tagion_hibon_add_uint32 = _tagion_hibon_add_uint32Ptr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, int)>();

  int tagion_hibon_add_array_uint32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_uint32(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_uint32');
  late final _tagion_hibon_add_array_uint32 =
      _tagion_hibon_add_array_uint32Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_uint64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    int value,
  ) {
    return _tagion_hibon_add_uint64(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Uint64)>>('tagion_hibon_add_uint64');
  late final _tagion_hibon_add_uint64 = _tagion_hibon_add_uint64Ptr.asFunction<
      int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, int)>();

  int tagion_hibon_add_array_uint64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_uint64(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_uint64');
  late final _tagion_hibon_add_array_uint64 =
      _tagion_hibon_add_array_uint64Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_float32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    double value,
  ) {
    return _tagion_hibon_add_float32(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Float)>>('tagion_hibon_add_float32');
  late final _tagion_hibon_add_float32 =
      _tagion_hibon_add_float32Ptr.asFunction<
          int Function(
              ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, double)>();

  int tagion_hibon_add_array_float32(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_float32(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_float32');
  late final _tagion_hibon_add_array_float32 =
      _tagion_hibon_add_array_float32Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  int tagion_hibon_add_float64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    double value,
  ) {
    return _tagion_hibon_add_float64(
      h,
      key,
      key_len,
      value,
    );
  }

  late final _tagion_hibon_add_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>,
              ffi.Uint64, ffi.Double)>>('tagion_hibon_add_float64');
  late final _tagion_hibon_add_float64 =
      _tagion_hibon_add_float64Ptr.asFunction<
          int Function(
              ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int, double)>();

  int tagion_hibon_add_array_float64(
    ffi.Pointer<HiBONT> h,
    ffi.Pointer<ffi.Char> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    return _tagion_hibon_add_array_float64(
      h,
      key,
      key_len,
      buf,
      buf_len,
    );
  }

  late final _tagion_hibon_add_array_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<HiBONT>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Uint8>,
              ffi.Uint64)>>('tagion_hibon_add_array_float64');
  late final _tagion_hibon_add_array_float64 =
      _tagion_hibon_add_array_float64Ptr.asFunction<
          int Function(ffi.Pointer<HiBONT>, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Uint8>, int)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class HiBONT extends ffi.Struct {
  @ffi.Int32()
  external int magic_byte;

  external ffi.Pointer<ffi.Void> hibon;
}

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int USER_ADDR_NULL = 0;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int __bool_true_false_are_defined = 1;

const int true1 = 1;

const int false1 = 0;
